[package]
name = "tower_middleware_example"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.4"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
